--- a/src/app/pages/fill-form/fill-form.component.html
+++ b/src/app/pages/fill-form/fill-form.component.html
@@ -2,128 +2,164 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <div class="card">
-        <form (ngSubmit)="post(f)" #f="ngForm">
-            <h5 class="card-header">Informações Pessoais</h5>
+        <form [formGroup]="form" (ngSubmit)="onSubmit()" novalidate>
+
+            <p class="card-header">Informações Pessoais</p>
             <div class="card-body">
-                <div class="form-row form-group">                    
+                <div class="form-row form-group">
                     <div class="col">
-                        <label for="exampleFormControlInput1">Username</label>
+                        <label for="username">Username</label>
                         <div class="input-group mb-2">
                             <div class="input-group-prepend">
                                 <div class="input-group-text">@</div>
                             </div>
-                            <input type="text" class="form-control" name="username" placeholder="Username">
+                            <input class="form-control" type="text" id="username" name="username"
+                                formControlName="username">
                         </div>
                     </div>
                     <div class="col">
-                        <label for="exampleFormControlInput1">Nome</label>
-                        <input type="text" class="form-control" name="name" placeholder="João Silva">
+                        <label for="name">Nome</label>
+                        <input class="form-control" type="text" id="name" name="name" formControlName="name"
+                            placeholder="João Silva">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Descrição</label>
-                    <textarea class="form-control" name="description" rows="3"
-                        placeholder="Fale um pouco sobre você"></textarea>
+                    <label for="description">Descrição</label>
+                    <textarea class="form-control" type="text" id="description" name="description"
+                        formControlName="description" rows="3" placeholder="Fale um pouco sobre você"></textarea>
                 </div>
             </div>
-            <h5 class="card-header">Informações para contato</h5>
+            <p class="card-header">Informações para contato</p>
+            <div class="card-body" formGroupName="contacts">
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control" id="email" name="email" formControlName="email"
+                        placeholder="joao@gmail.com">
+                </div>
+                <div class="form-group">
+                    <label for="linkedin">Linkedin</label>
+                    <input type="url" class="form-control" id="linkedin" name="linkedin" formControlName="linkedin"
+                        placeholder="linkedin.com/JoaoSilva">
+                </div>
+                <div class="form-group">
+                    <label for="phone">Telefone</label>
+                    <input type="tel" class="form-control" id="phone" name="phone" formControlName="phone"
+                        placeholder="(11) 11111-1111">
+                </div>
+            </div>
+            <p class="card-header">Interesses e Conhecimentos</p>
             <div class="card-body">
-                <div class="form-group">
-                    <label for="exampleFormControlInput1">Email</label>
-                    <input type="email" class="form-control" name="email" placeholder="joao@gmail.com">
+                <div class="mb-4" formArrayName="interests">
+                    <div class="form-group">
+                        <label for="interests">Interesses</label>
+                        <div class="form-row align-items-end mb-2"
+                            *ngFor="let interest of interests.controls; let i=index; let first=first">
+                            <input class="col-sm-11 form-control" id="interest-{{ i }}" type="text"
+                                [formControlName]="i">
+                            <div class="col-sm-1">
+                                <button *ngIf="interests.controls.length != 1" (click)="deleteRow(i, 'interests')"
+                                    class="btn btn-danger">-</button>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary" type="button" (click)="addRow('interests')"
+                        [disabled]="verifyLastInterest()">adicionar linha</button>
                 </div>
-                <div class="form-group">
-                    <label for="exampleFormControlInput1">Linkedin</label>
-                    <input type="url" class="form-control" name="linkedin" placeholder="linkedin.com/JoaoSilva">
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlInput1">Telefone</label>
-                    <input type="tel" class="form-control" name="phone" placeholder="(11) 11111-1111">
+                <div formArrayName="skills">
+                    <div class="form-group">
+                        <label for="skills">Conhecimentos</label>
+                        <div class="form-row align-items-end mb-2"
+                            *ngFor="let skill of skills.controls; let i=index; let first=first">
+                            <input class="col-sm-11 form-control" id="skill-{{ i }}" type="text" [formControlName]="i">
+                            <div class="col-sm-1">
+                                <button *ngIf="skills.controls.length != 1" (click)="deleteRow(i, 'skills')"
+                                    class="btn btn-danger">-</button>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary" type="button" (click)="addRow('skills')"
+                        [disabled]="verifyLastSkill()">adicionar linha</button>
                 </div>
             </div>
-            <h5 class="card-header">Interesses e Conhecimentos</h5>
-            <div class="card-body">
-                <div class="interests">
-                    <span *ngFor="let i of interests" class="interests__element">{{i}}</span>
-                </div>
-                <div class="form-group form-row align-items-end mb-lg-5">
-                    <div class="col-sm-11">
-                        <label for="exampleFormControlTextarea1">Interesses</label>
-                        <input type="text" class="form-control"
-                            placeholder="Digite um por vez, clicando no botão à direita para adicionar. Ex: 'Web development'"
-                            [(ngModel)]="interest" name="interest">
+            <section>
+                <p class="card-header">Informações Profissionais</p>
+                <div class="card-body" formArrayName="professionalBackground">
+                    <div class="section" *ngFor="let prof of professionalBackground.controls; let i=index">
+                        <div [formGroupName]="i">
+                            <div class="form-group">
+                                <label for="company">Empresa</label>
+                                <input class="form-control" type="text" id="company" name="company"
+                                    formControlName="company" placeholder="Empresa">
+                            </div>
+                            <div class="form-group">
+                                <label for="role">Cargo</label>
+                                <input class="form-control" type="text" id="role" name="role" formControlName="role"
+                                    placeholder="Engenheiro de Software Jr.">
+                            </div>
+                            <div class="form-group">
+                                <label for="roleDescription">Descrição do cargo</label>
+                                <textarea class="form-control" id="roleDescription" name="roleDescription"
+                                    formControlName="roleDescription" rows="3"
+                                    placeholder="Fale um pouco sobre sua atuação"></textarea>
+                            </div>
+                            <!-- <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="isCurrentlyJob"
+                                    name="isCurrentlyJob" formControlName="isCurrentlyJob">
+                                <label class="custom-control-label mb-3" for="isCurrentlyJob">Emprego atual</label>
+                            </div> -->
+                            <div class="form-row form-group">
+                                <div class="col">
+                                    <label for="startDate">Data de ínicio</label>
+                                    <input class="form-control" id="startDate" name="startDate"
+                                        formControlName="startDate" type="date">
+                                </div>
+                                <div class="col">
+                                    <label for="endDate">Data fim</label>
+                                    <input class="form-control" id="endDate" name="endDate" formControlName="endDate"
+                                        type="date">
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-sm-1">
-                        <input class="btn btn-primary" type="button" value="add" (click)="addInterests(interest)">
+                    <button class="btn btn-primary" type="button" (click)="addProfessionalBackground()">adicionar
+                        outra experiência</button>
+                </div>
+            </section>
+            <section>
+                <p class="card-header">Informações Acadêmicas</p>
+                <div class="card-body" formArrayName="academicInfo">
+                    <div class="section" *ngFor="let acad of academicInfo.controls; let i=index; let first=first">
+                        <div [formGroupName]="i">
+                            <div class="form-group">
+                                <label for="company">Instituição</label>
+                                <input class="form-control" type="text" id="institution" name="institution"
+                                    formControlName="institution" placeholder="USP">
+                            </div>
+                            <div class="form-group">
+                                <label for="company">Curso</label>
+                                <input class="form-control" type="text" id="course" name="course"
+                                    formControlName="course" placeholder="Sistemas de Informação">
+                            </div>
+                            <div class="form-row form-group">
+                                <div class="col">
+                                    <label for="startDate">Data de ínicio</label>
+                                    <input class="form-control" id="startDate" name="startDate"
+                                        formControlName="startDate" type="date">
+                                </div>
+                                <div class="col">
+                                    <label for="endDate">Data de conclusão</label>
+                                    <input class="form-control" id="endDate" name="endDate" formControlName="endDate"
+                                        type="date">
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                    <button class="btn btn-primary" type="button" (click)="addAcademicInfo()">adicionar
+                        outro curso</button>
                 </div>
-                <div class="interests">
-                    <span *ngFor="let i of skills" class="interests__element">{{i}}</span>
-                </div>
-                <div class="form-group form-row align-items-end">
-                    <div class="col-sm-11">
-                        <label for="exampleFormControlTextarea1">Conhecimentos</label>
-                        <input type="text" class="form-control"
-                            placeholder="Digite um por vez, clicando no botão à direita para adicionar. Ex: 'Web development'"
-                            [(ngModel)]="skill" name="skill">
-                    </div>
-                    <div class="col-sm-1">
-                        <input class="btn btn-primary" type="button" value="add" (click)="addSkills(skill)">
-                    </div>
-                </div>
-            </div>
-            <h5 class="card-header">Informações Profissionais</h5>
-            <div class="card-body">
-                <div class="form-group">
-                    <label for="exampleFormControlInput1">Empresa</label>
-                    <input type="text" class="form-control" placeholder="Empresa">
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlInput1">Cargo</label>
-                    <input type="text" class="form-control" placeholder="Engenheiro de Software Jr.">
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Descrição do cargo</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
-                        placeholder="Fale um pouco sobre sua atuação"></textarea>
-                </div>
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck1" (change)="onCheckChange($event)">
-                    <label class="custom-control-label mb-3" for="customCheck1">Emprego atual</label>
-                  </div>
-                <div class="form-row form-group">
-                    <div class="col">
-                        <label for="exampleFormControlInput1">Data de ínicio</label>
-                        <input class="form-control" id="date" type="date">
-                    </div>
-                    <div class="col">
-                        <label for="exampleFormControlInput1">Data fim</label>
-                        <input class="form-control" id="date" type="date" [disabled]="isCurrentlyJob">
-                    </div>
-                </div>                
-            </div>
-            <h5 class="card-header">Informações Acadêmicas</h5>
-            <div class="card-body">
-                <div class="form-group">
-                    <label for="exampleFormControlInput1">Instituição</label>
-                    <input type="text" class="form-control" placeholder="USP">
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlInput1">Curso</label>
-                    <input type="text" class="form-control" placeholder="Sistemas de Informação">
-                </div>
-                <div class="form-row form-group">
-                    <div class="col">
-                        <label for="exampleFormControlInput1">Data de ínicio</label>
-                        <input class="form-control" id="date" type="date">
-                    </div>
-                    <div class="col">
-                        <label for="exampleFormControlInput1">Data de conclusão</label>
-                        <input class="form-control" id="date" type="date" >
-                    </div>
-                </div>         
-                <button class="btn btn-success btn-lg btn-block" type="submit">Submit form</button>
-            </div>
+            </section>
+            <button class="btn btn-success btn-lg btn-block" type="submit"
+                [disabled]="!form.valid">Enviar</button>
         </form>
     </div>
 </div>
