--- a/src/app/pages/fill-form/fill-form.component.scss
+++ b/src/app/pages/fill-form/fill-form.component.scss
@@ -1,6 +1,5 @@
 .forms {
-    padding: 20px;
-    width: 70%;
+    padding: 20px 100px;
 }
 
 .interests {
@@ -16,4 +15,10 @@
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI";
         margin-bottom: 10px;
     }
+}
+
+.section:not(:first-child) {
+    border-top: 3px solid lightgrey;
+    margin-top: 30px;
+    padding-top: 20px;
 }
