feat: template portfolio

--- a/src/app/pages/template-portfolio/template-portfolio.component.html
+++ b/src/app/pages/template-portfolio/template-portfolio.component.html
@@ -1,8 +1,8 @@
-<!-- <div class="container">
+<div class="container">
     <nav class="side-bar">
         <ol class="list">
             <li>
-                <button class="item" (click)="teste('contacts')">
+                <button class="item" (click)="showSection('contacts')">
                     <p class="item__text">
                         Contatos
                     </p>
@@ -10,28 +10,28 @@
 
             </li>
             <li>
-                <button class="item" (click)="teste('interests')">
+                <button class="item" (click)="showSection('interests')">
                     <p class="item__text">
                         Interesses
                     </p>
                 </button>
             </li>
             <li>
-                <button class="item" (click)="teste('academic')">
+                <button class="item" (click)="showSection('academic')">
                     <p class="item__text">
                         Formação Acadêmica
                     </p>
                 </button>
             </li>
             <li>
-                <button class="item" (click)="teste('professional')">
+                <button class="item" (click)="showSection('professional')">
                     <p class="item__text">
                         Experiência Profissional
                     </p>
                 </button>
             </li>
             <li>
-                <button class="item" (click)="teste('skills')">
+                <button class="item" (click)="showSection('skills')">
                     <p class="item__text">
                         Conhecimentos
                     </p>
@@ -86,4 +86,4 @@
             </div>
         </div>
     </div>
-</div> -->
+</div>
