feat: formulario para edicao

--- a/webapp/src/app/pages/fill-form/fill-form.component.html
+++ b/webapp/src/app/pages/fill-form/fill-form.component.html
@@ -116,7 +116,7 @@
                             </div>
                         </div>
                     </div>
-                    <button class="btn btn-primary" type="button" (click)="addProfessionalBackground()">adicionar
+                    <button class="btn btn-primary" type="button" (click)="addRow('professional')">adicionar
                         outra experiência</button>
                 </div>
             </section>
@@ -149,7 +149,7 @@
                             </div>
                         </div>
                     </div>
-                    <button class="btn btn-primary" type="button" (click)="addAcademicInfo()">adicionar
+                    <button class="btn btn-primary" type="button" (click)="addRow('academic')">adicionar
                         outro curso</button>
                 </div>
             </section>
